fix(stylesheets): Fixed main HTML element overflow not scrolling

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -32,6 +32,6 @@
 	}
 
 	gap: get-spacing-value(spacing-32);
-	overflow: auto;
+	overflow: scroll;
 	background-color: rgb(255, 192, 116);
 }
